--- a/index.html
+++ b/index.html
@@ -3,13 +3,91 @@ layout: default
 ---
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
-    {% if sites.posts_btn %}
-    <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>
+    {% if site.experiences_btn %}
+    <a id="experiences-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_list('experiences');">{{ site.experiences_btn }}</a>
+    {% endif %}
+    {% if site.education_btn %}
+    <a id="education-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_list('education');">{{ site.education_btn }}</a>
+    {% endif %}
+    {% if site.skills_btn %}
+    <a id="skills-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_list('skills');">{{ site.skills_btn }}</a>
+    {% endif %}
+    {% if site.posts_btn %}
+    <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_list('posts');">{{ site.posts_btn }}</a>
     {% endif %}
     {% if site.projects_btn %}
-    <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
+    <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_list('projects');">{{ site.projects_btn }}</a>
     {% endif %}
 </div>
+
+<div id="experiences">
+    <ul>
+        {% for experience in site.data.experiences %}
+        <li class="my-item">
+            <div class="my-mini-heading">{{ experience.title }}</div>
+            <span>{{ experience.employer }}</span><br/>
+            <span class="my-mini-heading-sub">{{ experience.date }}</span>
+
+            <p>
+                {{ experience.description }}
+            </p>
+
+            {% if experience.website %}
+                <a href="http://{{experience.website}}" class="my-link">{{experience.website}}</a>
+            {% endif %}
+        </li>
+        {% endfor %}
+    </ul>
+
+    <div>
+    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+    </div>
+</div>
+
+<div id="education">
+    <ul>
+        {% for diploma in site.data.diplomas %}
+            <li class="my-item">
+                <div class="my-mini-heading">{{ diploma.title }}</div>
+                <span>{{ diploma.school }}</span><br/>
+                <span class="my-mini-heading-sub">{{ diploma.date }}</span>
+
+                {% if diploma.description %}
+                    <p>
+                        {{ diploma.description }}
+                    </p>
+                {% endif %}
+            </li>
+        {% endfor %}
+    </ul>
+
+    <div>
+    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+    </div>
+</div>
+
+<div id="skills">
+    {% for section in site.data.skills.sections %}
+        <div class="my-mini-heading">{{ section.title }}</div>
+        <ul>
+            {% for skill in section.items %}
+                <li>
+                    {% if skill.content %}
+                        <b>{{skill.title}}</b>:&nbsp;
+                        {{skill.content}}
+                    {% else %}
+                        {{ skill.title }}
+                    {% endif %}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endfor %}
+
+    <div>
+    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+    </div>
+</div>
+
 <div id="posts">
 
   <h2 class="my-mini-heading">{{ site.posts_btn }}</h2>
